fixed content spacing

--- a/src/resources/sass/layout/_content.scss
+++ b/src/resources/sass/layout/_content.scss
@@ -1,4 +1,8 @@
-.content-wrapper {
+&.content-wrapper {
 	overflow-Y: scroll ;
 	height: auto;
+
+	&--spacing-top {
+		margin-top: 20px;
+	}
 }
